[package]
name = "arti-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jobserver = { version = "=0.1.20", default-features = false } # temporary fix for musl due to broken upstream version '0.1.29'
arti = "1.2.1"
arti-client = "0.17.0"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "io-std"] }
anyhow = "1.0.82"
http = "1.1.0"
hyper = { version = "1.2.0", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["tokio"] }
http-body-util = "0.1.1"
